add day100 and lianliankan

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,12 @@
-theme: jekyll-theme-cayman
+# theme: jekyll-theme-cayman
+# theme: jekyll-theme-architect
+theme: jekyll-theme-dinky
+# theme: jekyll-theme-hacker
+# theme: jekyll-theme-leap-day
+# theme: jekyll-theme-merlot
+# theme: jekyll-theme-midnight
+# theme: jekyll-theme-minimal
+# theme: jekyll-theme-modernist
+# theme: jekyll-theme-slate
+# theme: jekyll-theme-tectile
+# theme: jekyll-theme-time-machine
