--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # theme: jekyll-theme-cayman
 # theme: jekyll-theme-architect
-theme: jekyll-theme-dinky
-# theme: jekyll-theme-hacker
+# theme: jekyll-theme-dinky
+theme: jekyll-theme-hacker
 # theme: jekyll-theme-leap-day
 # theme: jekyll-theme-merlot
 # theme: jekyll-theme-midnight
