--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-cayman
+# theme: jekyll-theme-cayman
 # theme: jekyll-theme-architect
 # theme: jekyll-theme-dinky
 # theme: jekyll-theme-hacker
@@ -9,4 +9,4 @@ theme: jekyll-theme-cayman
 # theme: jekyll-theme-modernist
 # theme: jekyll-theme-slate
 # theme: jekyll-theme-tectile
-# theme: jekyll-theme-time-machine
+theme: jekyll-theme-time-machine
