--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-theme: jekyll-theme-cayman
-# theme: jekyll-theme-architect
+# theme: jekyll-theme-cayman
+theme: jekyll-theme-architect
 # theme: jekyll-theme-dinky
 # theme: jekyll-theme-hacker
 # theme: jekyll-theme-leap-day
